# wake

./: .gitignore  BACKLOG.md  LICENSE  PLAN.md  README.md  pyproject.toml
docs/: README.md  abstract-recovery.md  evidence.md  narrative.md  pdf-sources.md  themes.md  workflow.md
docs/design/: theme-workflow-reframe.md
tests/: conftest.py  test_author_overlap.py  test_backfill.py  test_classify.py  test_config.py  test_cost.py  test_dedup.py  test_emit.py  test_evidence.py  test_evidence_rendering.py  test_evidence_wiki.py  test_exclude.py  test_gaps.py  test_io.py  test_missing_pdfs.py  test_narrative.py  test_openai_client.py  test_openalex.py  test_osti_semanticscholar.py  test_overrides.py  test_pdf_abstract.py  test_pdf_fetch.py  test_pdf_fulltext.py  test_pdf_sources.py  test_pdf_verify.py  test_posters.py  test_report.py  test_sample.py  test_seed.py  test_seed_fetch_pdf.py  test_show_verbs.py  test_similarity.py  test_springer.py  test_state.py  test_themes.py  test_unverify.py
wake/: __init__.py  __main__.py  abstract_extract.py  author_overlap.py  backfill.py  citing.py  classify.py  config.py  config.yaml  cost.py  dedup.py  describe.py  errors.py  evidence.py  evidence_wiki.py  exclude.py  gaps.py  io.py  missing_pdfs.py  narrative.py  pdf_fetch.py  pdf_verify.py  posters.py  report.py  seed.py  seed_pdf.py  similarity.py  state.py  themes.py  unverify.py
wake/cli/: emit.py  main.py  skill.py
wake/llm/: openai_client.py
wake/sources/: _http.py  arxiv_fetch.py  core.py  openalex.py  osti.py  pdf_abstract.py  pdf_fulltext.py  semanticscholar.py  (+2 more)
(+12 files in other folders)
