[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "wake"
version         = "0.1.0"
description     = "Evidence-backed impact analysis for research papers"
readme          = "README.md"
requires-python = ">=3.10"
license         = "BSD-3-Clause"
authors         = [{ name = "Robert Ross", email = "rross@anl.gov" }]
dependencies = [
    "requests>=2.31",
    "openai>=1.0",
    "tenacity>=8.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[project.scripts]
wake = "wake.cli.main:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["wake*"]

[tool.setuptools.package-data]
wake = ["config.yaml", "skills/impact-analysis/**/*"]

[tool.pytest.ini_options]
markers = [
    "network: marks tests that make real network calls (deselect with -m 'not network')",
]
